@@ -1,3 +1,10 @@
+1999-02-20  Ross Johnson  <rpj@ise.canberra.edu.au>
+
+	* mutex2.c: Test static mutex initialisation.
+
+	* test.h: New. Declares a table mapping error numbers to
+	error names.
+
 1999-01-17  Ross Johnson  <rpj@ise.canberra.edu.au>
 
 	* runtest: New script to build and run a test in the tests directory.
